WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55430
OwnArrayPtr.h’s LOOSE_OWN_ARRAY_PTR mode results in code that does not link
https://bugs.webkit.org/show_bug.cgi?id=55430
Summary
OwnArrayPtr.h’s LOOSE_OWN_ARRAY_PTR mode results in code that does not link
Mark Rowe (bdash)
Reported
2011-02-28 17:03:27 PST
OwnArrayPtr::set is lacking an implementation so using LOOSE_OWN_ARRAY_PTR results in code that doesn’t compile.
Attachments
Patch
(1.71 KB, patch)
2011-02-28 17:11 PST
,
Mark Rowe (bdash)
darin
: review-
Details
Formatted Diff
Diff
Patch
(1.74 KB, patch)
2011-02-28 17:19 PST
,
Mark Rowe (bdash)
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2011-02-28 17:11:13 PST
Created
attachment 84159
[details]
Patch
Mark Rowe (bdash)
Comment 2
2011-02-28 17:12:23 PST
Comment on
attachment 84159
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=84159&action=review
> Source/JavaScriptCore/wtf/OwnArrayPtr.h:114 > +template<typename T> inline void OwnArrayPtr<T>::set(PtrType ptr)
This is obviously missing the necessary #ifdef.
Darin Adler
Comment 3
2011-02-28 17:16:58 PST
Comment on
attachment 84159
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=84159&action=review
> Source/JavaScriptCore/wtf/OwnArrayPtr.h:114 > +template<typename T> inline void OwnArrayPtr<T>::set(PtrType ptr)
Needs to be inside an #ifdef.
Mark Rowe (bdash)
Comment 4
2011-02-28 17:19:29 PST
Created
attachment 84160
[details]
Patch
WebKit Review Bot
Comment 5
2011-02-28 17:32:15 PST
Attachment 84159
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/8074436
Mark Rowe (bdash)
Comment 6
2011-02-28 17:56:00 PST
Landed in
r79955
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug