<http://webkit.org/b/55430> OwnArrayPtr.h's LOOSE_OWN_ARRAY_PTR results in link errors.

Reviewed by Darin Adler.

* wtf/OwnArrayPtr.h:
(WTF::::set): Implement OwnArrayPtr::set.

Canonical link: https://commits.webkit.org/69852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79955 268f45cc-cd09-0410-ab3c-d52691b4dbfc